# com.webos.service.ai

./: .gitignore  CMakeLists.txt  README.md  oss-pkg-info.yaml
files/sysbus/: com.webos.service.ai.api.json  com.webos.service.ai.face.service.in  com.webos.service.ai.face.service.prv.in  com.webos.service.ai.gesture.service.in  com.webos.service.ai.gesture.service.prv.in  com.webos.service.ai.groups.json  com.webos.service.ai.json.pub.in  com.webos.service.ai.perm.json  com.webos.service.ai.role.json.in  com.webos.service.ai.service.in  com.webos.service.ai.voice.service.in  com.webos.service.ai.voice.service.pub.in
files/systemd/: ai.conf  ai.service
files/systemd/services/: ai.env  ai.service
include/lunaApi/: lunaApiBase.h  lunaApiFace.h  lunaApiGesture.h  lunaApiVoice.h
include/util/: logging.h
src/: main.cpp
src/lunaApi/: lunaApiBase.cpp  lunaApiFace.cpp  lunaApiGesture.cpp  lunaApiVoice.cpp
src/util/: logging.cpp
